samples/_failures_safe/1761084223_901b2f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ee06cb00.c: In function ‘main’:
./samples/SAFE/__tmp_ee06cb00.c:173:12: error: missing terminating " character
  173 |     printf("\nTokens:\
      |            ^~~~~~~~~~~
./samples/SAFE/__tmp_ee06cb00.c:173:5: error: expected expression at end of input
  173 |     printf("\nTokens:\
      |     ^~~~~~
./samples/SAFE/__tmp_ee06cb00.c:173:5: error: expected declaration or statement at end of input
